Some additions in Skill section

--- a/index.html
+++ b/index.html
@@ -16,9 +16,8 @@
             <ul class="nav-list">
                 <li class="nav-item"><a href="">Get In Touch</a></li>
                 <li class="nav-item"><a href="">About Me</a></li>
-                <li class="nav-item"><a href="">My Projects</a></li>
-                <li class="nav-item"><a href="">Tools</a></li>
-                <li class="nav-item"><a href="">Langguages</a></li>
+                <li class="nav-item"><a href="">Projects</a></li>
+                <li class="nav-item"><a href="#skill">Skills</a></li>
             </ul>
         </div>
     </nav>
@@ -31,20 +30,29 @@
                 <img class="logo" src="images/logo.png" alt="picture ko">
             </div>
         </header>
-        <section class="prog-lang" id="Languages">
-            <h1>Languages I Speak</h1>
+        <section class="prog-lang" id="skill">
+            <h1>Skill Learned</h1>
+            <br>
+            <hr>
             <div class="col-left">
                 <h2>Front-End</h2>
                 <img class="front" src="images/front.png" alt="">
-                <p>HTML, CSS, JavaScript</p>
+                <p>HTML, CSS, JavaScript, Bootstrap, JQuery</p>
             </div>
-            <div class="col-right">
+            <div class="center">
                 <h2>Back-End</h2>
                 <img class="back" src="images/back.png" alt="">
                 <p>PHP, MySQL</p>
             </div>
+            <div class="col-right">
+                <h2>Tools</h2>
+                <img class="back" src="images/tools.png" alt="">
+                <p>MySQL Workbench, Visual Studio Code, Apache Netbeans, GIt Bash, Github,</p>
+            </div>
         </section>
-        <section></section>
+        <section>
+
+        </section>
         <section></section>
     </main>
     <footer>
