--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <header class="header-intro">
             <div class="intro">
                 <h1>Jhon Melvin Dolot</h1>
-                <h2>Future Full Stack Web Developer</h2>
+                <h2>Future Full Stack Developer</h2>
                 <p>Hi! My name is Melvin. I love building things from scratch</p>
                 <img class="logo" src="images/logo.png" alt="picture ko">
             </div>
