--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/color-change.css">
-
-    <!-- Scripts -->
-    <script src="js/main.js"></script>
+    
 
     <title>Web Portfolio</title>
 </head>
@@ -29,8 +27,9 @@
             </div>
             <ul class="nav">
                 <li><a class="active" href=""><i class='bx bxs-home' ></i>Home</a></li>
-                <li><a href=""><i class='bx bxs-dashboard' ></i>Projects</a></li>
                 <li><a href=""><i class='bx bxs-user' ></i>About Me</a></li>
+                <li><a href=""><i class='bx bx-book-bookmark'></i>Roadmap</a></li>
+                <li><a href=""><i class='bx bxs-dashboard' ></i>Projects</a></li>
                 <li><a href=""><i class='bx bxs-phone' ></i>Get in Touch</a></li>
             </ul>
         </aside>
@@ -139,7 +138,6 @@
                                                         cupiditate!
                                                     </p>
                                                 </div>
-                                                <br>
                                                 <div class="timeline-item">
                                                     <div class="circle-dot"></div>
                                                     <h3 class="timeline-date">
@@ -153,11 +151,10 @@
                                                         cupiditate!
                                                     </p>
                                                 </div>
-                                                <br>
                                                 <div class="timeline-item">
                                                     <div class="circle-dot"></div>
                                                     <h3 class="timeline-date">
-                                                        <i class='bx bx-calendar'></i>2023-2025
+                                                        <i class='bx bx-calendar'></i>202X-202X
                                                     </h3>
                                                     <h4 class="timeline-title">Bachelor of Science in Computer Engineering(BSCpE)</h4>
                                                     <p class="timeline-text">
@@ -173,6 +170,53 @@
                                 </div>
                                 <div class="education padd-15">
                                     <h3 class="title">Certification</h3>
+                                    <div class="row">
+                                        <div class="timeline-box padd-15">
+                                            <div class="timeline shadow-dark">
+                                                <!-- Timeline Items -->
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class='bx bx-calendar'></i>2022
+                                                    </h3>
+                                                    <h4 class="timeline-title">Intermediate Front-End Development</h4>
+                                                    <p class="timeline-text">Bayan Academy supported by J.P. Morgan Company</p>
+                                                </div>
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class='bx bx-calendar'></i>2022
+                                                    </h3>
+                                                    <h4 class="timeline-title">Information Systems Strategic Planning (ISSP)</h4>
+                                                    <p class="timeline-text">Department of Information Technology Region 9 Basulta Office</p>
+                                                </div>
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class='bx bx-calendar'></i>2022
+                                                    </h3>
+                                                    <h4 class="timeline-title">Basic Web Profiling Coding Workshop</h4>
+                                                    <p class="timeline-text">ZUITT X KALIBRR</p>
+                                                </div>
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class='bx bx-calendar'></i>2022
+                                                    </h3>
+                                                    <h4 class="timeline-title">Participating in Workplace Communication</h4>
+                                                    <p class="timeline-text">Technical Education and Skills Development Authority</p>
+                                                </div>
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class='bx bx-calendar'></i>2022
+                                                    </h3>
+                                                    <h4 class="timeline-title">Gender and Development Webinar</h4>
+                                                    <p class="timeline-text">Organized GAD Webinar by PUP students with the help of PUP-Institute of Technology</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -184,5 +228,9 @@
         <!-- Main Content End -->
     </div>
     <!-- Main Container End -->
+    
+    <!-- Scripts -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" referrerpolicy="no-referrer"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
