--- a/index.html
+++ b/index.html
@@ -26,28 +26,29 @@
                 <span></span>
             </div>
             <ul class="nav">
-                <li><a class="active" href=""><i class='bx bxs-home' ></i>Home</a></li>
-                <li><a href=""><i class='bx bxs-user' ></i>About Me</a></li>
-                <li><a href=""><i class='bx bx-book-bookmark'></i>Roadmap</a></li>
-                <li><a href=""><i class='bx bxs-dashboard' ></i>Projects</a></li>
-                <li><a href=""><i class='bx bxs-phone' ></i>Get in Touch</a></li>
+                <li><a class="active" href="#home"><i class='bx bxs-home' ></i>Home</a></li>
+                <li><a href="#me"><i class='bx bxs-user' ></i>About Me</a></li>
+                <li><a href="#roadmap"><i class='bx bx-book-bookmark'></i>Roadmap</a></li>
+                <li><a href="#project"><i class='bx bxs-dashboard' ></i>Projects</a></li>
+                <li><a href="#contact"><i class='bx bxs-phone' ></i>Get in Touch</a></li>
             </ul>
         </aside>
         <!-- Aside End -->
         <!-- Main Content Start -->
         <div class="main-content">
             <!-- Home Start -->
-            <section class="home section hidden">
+            <section class="home hidden">
                 <div class="container">
                     <div class="row">
                         <div class="home-info">
                             <h3 class="hello">Hello, my name is <span class="name">Jhon Melvin Dolot</span></h3>
                             <h3 class="my-profession">I'm a <span class="typing">Future Web Developer</span></h3>
                             <p>
-                                I'm a Computer Engineering Technology student of Polytechnic University of the Philippines Sta Mesa. 
+                                I'm a Computer Engineering Technology student of Polytechnic University of the Philippines Sta Mesa.
+                                <br>
                                 I'm a self-taught developer. I love building things from scratch.
                             </p>
-                            <a href="#contact" class="hire-btn">Hire Me</a>
+                            <a href="#me" class="hire-btn">System Info</a>
                         </div>
                         <div class="home-img">
                             <img src="img/hehe.jpg" alt="">
@@ -57,7 +58,7 @@
             </section>
             <!-- Home End -->
             <!-- About Start -->
-            <section class="about section">
+            <section class="about hidden" id="me">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -143,7 +144,7 @@
                                                     <h3 class="timeline-date">
                                                         <i class='bx bx-calendar'></i>2020-2023
                                                     </h3>
-                                                    <h4 class="timeline-title">Diploma in Computer Engineering Technology (DCET)</h4>
+                                                    <h4 class="timeline-title">Diploma in Computer Engineering Technology (DCpET)</h4>
                                                     <p class="timeline-text">
                                                         Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
                                                         Natus modi fugit dicta quibusdam dolorum sunt voluptates ab, 
@@ -188,7 +189,7 @@
                                                         <i class='bx bx-calendar'></i>2022
                                                     </h3>
                                                     <h4 class="timeline-title">Information Systems Strategic Planning (ISSP)</h4>
-                                                    <p class="timeline-text">Department of Information Technology Region 9 Basulta Office</p>
+                                                    <p class="timeline-text">Department of Information Technology (DICT) Region 9 Basulta Office</p>
                                                 </div>
                                                 <div class="timeline-item">
                                                     <div class="circle-dot"></div>
@@ -204,7 +205,7 @@
                                                         <i class='bx bx-calendar'></i>2022
                                                     </h3>
                                                     <h4 class="timeline-title">Participating in Workplace Communication</h4>
-                                                    <p class="timeline-text">Technical Education and Skills Development Authority</p>
+                                                    <p class="timeline-text">Technical Education and Skills Development Authority (TESDA)</p>
                                                 </div>
                                                 <div class="timeline-item">
                                                     <div class="circle-dot"></div>
@@ -212,7 +213,7 @@
                                                         <i class='bx bx-calendar'></i>2022
                                                     </h3>
                                                     <h4 class="timeline-title">Gender and Development Webinar</h4>
-                                                    <p class="timeline-text">Organized GAD Webinar by PUP students with the help of PUP-Institute of Technology</p>
+                                                    <p class="timeline-text">Organized GAD Webinar by PUP students with the help of PUP-Institute of Technology (ITECH)</p>
                                                 </div>
                                             </div>
                                         </div>
@@ -224,6 +225,93 @@
                 </div>
             </section>
             <!-- About End -->
+            <!-- Learning Roadmap Section Start -->
+            <section class="roadmap" id="roadmap">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>Learning Roadmap</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <!-- Learning Roadmap Item Start -->
+                        <div class="learn-map-item padd-15">
+                            <div class="learn-map-item-inner">
+                                <div class="icon">
+                                    <i class='bx bx-devices' ></i>
+                                </div>
+                                <h4>Responsive Web Design</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                        <div class="learn-map-item padd-15">
+                            <div class="learn-map-item-inner">
+                                <div class="icon">
+                                    <i class='bx bx-devices' ></i>
+                                </div>
+                                <h4>Legacy Responsive Web Design</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                        <div class="learn-map-item padd-15">
+                            <div class="learn-map-item-inner">
+                                <div class="icon">
+                                    <i class='bx bxl-javascript' ></i>
+                                </div>
+                                <h4>JavaScript Algorithms and Data Structures</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                        <div class="learn-map-item padd-15">
+                            <div class="learn-map-item-inner">
+                                <div class="icon">
+                                    <i class='bx bxl-react' ></i>
+                                </div>
+                                <h4>Front End Development Libraries</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                        <div class="learn-map-item padd-15">
+                            <div class="learn-map-item-inner">
+                                <div class="icon">
+                                    <i class='bx bx-data'></i>
+                                </div>
+                                <h4>Data Visualization</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                        <div class="learn-map-item padd-15">
+                            <div class="learn-map-item-inner">
+                                <div class="icon">
+                                    <i class='bx bxs-data' ></i>
+                                </div>
+                                <h4>Relational Database</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                        <div class="learn-map-item padd-15">
+                            <div class="learn-map-item-inner">
+                                <div class="icon">
+                                    <i class='bx bx-cog' ></i>
+                                </div>
+                                <h4>Back End Development and APIs</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                        <div class="learn-map-item padd-15">
+                            <div class="learn-map-item-inner">
+                                <div class="icon">
+                                    <i class='bx bx-clipboard' ></i>
+                                </div>
+                                <h4>Quality Assurance</h4>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            </div>
+                        </div>
+                        <!-- Learning Roadmap Item End-->
+                    </div>
+                </div>
+            </section>
+            <!-- Learning Roadmap Section End -->
         </div>
         <!-- Main Content End -->
     </div>
