--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/color-change.css">
     
-
     <title>Web Portfolio</title>
 </head>
 <body>
@@ -26,18 +25,19 @@
                 <span></span>
             </div>
             <ul class="nav">
-                <li><a class="active" href="#home"><i class='bx bxs-home' ></i>Home</a></li>
-                <li><a href="#me"><i class='bx bxs-user' ></i>About Me</a></li>
-                <li><a href="#roadmap"><i class='bx bx-book-bookmark'></i>Roadmap</a></li>
-                <li><a href="#project"><i class='bx bxs-dashboard' ></i>Projects</a></li>
-                <li><a href="#contact"><i class='bx bxs-phone' ></i>Get in Touch</a></li>
+                <li class="nav-list"><a class="btn active" href="#home"><i class='bx bxs-home' ></i>Home</a></li>
+                <li class="nav-list"><a class="btn" href="#me"><i class='bx bxs-user' ></i>About Me</a></li>
+                <li class="nav-list"><a class="btn" href="#roadmap"><i class='bx bx-book-bookmark'></i>Roadmap</a></li>
+                <li class="nav-list"><a class="btn" href="#project"><i class='bx bxs-dashboard' ></i>Projects</a></li>
+                <li class="nav-list"><a class="btn" href="#contact"><i class='bx bxs-phone' ></i>Get in Touch</a></li>
             </ul>
         </aside>
         <!-- Aside End -->
+
         <!-- Main Content Start -->
         <div class="main-content">
             <!-- Home Start -->
-            <section class="home hidden">
+            <section class="home hidden" id="home">
                 <div class="container">
                     <div class="row">
                         <div class="home-info">
@@ -57,6 +57,7 @@
                 </div>
             </section>
             <!-- Home End -->
+
             <!-- About Start -->
             <section class="about hidden" id="me">
                 <div class="container">
@@ -165,6 +166,13 @@
                                                         cupiditate!
                                                     </p>
                                                 </div>
+                                                <div class="timeline-item">
+                                                    <div class="circle-dot"></div>
+                                                    <h3 class="timeline-date">
+                                                        <i class='bx bx-calendar'></i>202X-202X
+                                                    </h3>
+                                                    <h4 class="timeline-title">ₘ̧̝͈̯̽̓ͭ̔̓ͭ̌ₐ̀ͤ̐͗̽͑̌̕ₛ͚̣̞̥̲̣ͬ̊͗͊ͬₜ̪͎͉̀ₑ͎̘̜͍̫͔́ᵣ ̴̣̯̩͖̥̑ₒ̴̥f̢̺̈́̎̏ͯ ͉̜̗͓̗͚̻͛͆ₛ̊ͦ͏̪̪̭̙̬c͉͔̱̠͕̔ᵢ̺̬̟̠̣̟͛̎̆ͪ̊ͅₑ̺̜̗̮͌̋ͭ́ͣ̎̄̀ₙ̵̫̦̹̬̬̱̤̇͒̾ͧc͍̠̓ₑ̙͈͔͇̠͛́̽̿ ̦̊ͤ̂́ᵢ̅̌̉̾͊͌ͤₙ͍̠̙̻̞̿̂ ͔̯̰̖͓ͥ͐̽ͧ̂̚C̣̫̩̬͆ₒ̸͆̊ͩₘ̮͎̤̂̔̆ͦ̍̂̂ₚ̯̈ͤᵤͦ͌̀ͩ̒͑ͨₜ̵̼̩ͩₑ̜͉͖͈̩͈͖̎ᵣ̼̱̠͖͈̳̉͆ͨ͛ͦͣͤ͝ ͉͔͎̘̱̻̪ͥ̿̎ͭ̍͗̎̀ₑ̦͚̞̲̩̪ₙ̵̬͍̹̔͌ͩg̐̇ͭͩ͏̮̹͔ᵢ̯͚̯̏̓̆ͯ͘ₙ̜̟̠̤̔ͩₑ̝̱͍̠ͯ͒̐ₑ̯̹̯̣̦̪̳̆̋̊ᵣᵢ͍ͧ̈́̇ͬ̿ₙ͎ͭͪͣ̀g̷̳̭͎͇͉͚ͭ̓ͅ(̼̘̤͓̘̲̼́ͮ̑ͨ̐B̗͜ₛ̴̰͍͇̣̘̝̎̓C̬̯͙ͭ̌ͤͥₚ̻̜̥̌̂͝ͅₑ̪͉͎̙͆ͬ̎͋ͭ)͙͇</h4>                                                    
+                                                </div>
                                             </div>
                                         </div>
                                     </div>
@@ -225,8 +233,9 @@
                 </div>
             </section>
             <!-- About End -->
+
             <!-- Learning Roadmap Section Start -->
-            <section class="roadmap" id="roadmap">
+            <section class="roadmap hidden" id="roadmap">
                 <div class="container">
                     <div class="row">
                         <div class="section-title padd-15">
@@ -244,6 +253,8 @@
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             </div>
                         </div>
+                        <!-- Learning Roadmap Item End-->
+                        <!-- Learning Roadmap Item Start -->
                         <div class="learn-map-item padd-15">
                             <div class="learn-map-item-inner">
                                 <div class="icon">
@@ -253,6 +264,8 @@
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             </div>
                         </div>
+                        <!-- Learning Roadmap Item End-->
+                        <!-- Learning Roadmap Item Start -->
                         <div class="learn-map-item padd-15">
                             <div class="learn-map-item-inner">
                                 <div class="icon">
@@ -262,6 +275,8 @@
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             </div>
                         </div>
+                        <!-- Learning Roadmap Item End-->
+                        <!-- Learning Roadmap Item Start -->
                         <div class="learn-map-item padd-15">
                             <div class="learn-map-item-inner">
                                 <div class="icon">
@@ -271,6 +286,8 @@
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             </div>
                         </div>
+                        <!-- Learning Roadmap Item End-->
+                        <!-- Learning Roadmap Item Start -->
                         <div class="learn-map-item padd-15">
                             <div class="learn-map-item-inner">
                                 <div class="icon">
@@ -280,6 +297,8 @@
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             </div>
                         </div>
+                        <!-- Learning Roadmap Item End-->
+                        <!-- Learning Roadmap Item Start -->
                         <div class="learn-map-item padd-15">
                             <div class="learn-map-item-inner">
                                 <div class="icon">
@@ -289,6 +308,8 @@
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             </div>
                         </div>
+                        <!-- Learning Roadmap Item End-->
+                        <!-- Learning Roadmap Item Start -->
                         <div class="learn-map-item padd-15">
                             <div class="learn-map-item-inner">
                                 <div class="icon">
@@ -298,6 +319,8 @@
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
                             </div>
                         </div>
+                        <!-- Learning Roadmap Item End-->
+                        <!-- Learning Roadmap Item Start -->
                         <div class="learn-map-item padd-15">
                             <div class="learn-map-item-inner">
                                 <div class="icon">
@@ -312,11 +335,196 @@
                 </div>
             </section>
             <!-- Learning Roadmap Section End -->
+
+            <!-- Project Start -->
+            <section class="project hidden" id="project">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>Projects</h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="portfolio-heading padd-15">
+                            <h2>My List of Projects: </h2>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <!-- Portfolio Item Start -->
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner shadow-dark">
+                                <div class="portfolio-img">
+                                    <img src="img/portfolio/img.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Portfolio Item End -->
+                        <!-- Portfolio Item Start -->
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner shadow-dark">
+                                <div class="portfolio-img">
+                                    <img src="img/portfolio/img.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Portfolio Item End -->
+                        <!-- Portfolio Item Start -->
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner shadow-dark">
+                                <div class="portfolio-img">
+                                    <img src="img/portfolio/img.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Portfolio Item End -->
+                        <!-- Portfolio Item Start -->
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner shadow-dark">
+                                <div class="portfolio-img">
+                                    <img src="img/portfolio/img.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Portfolio Item End -->
+                        <!-- Portfolio Item Start -->
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner shadow-dark">
+                                <div class="portfolio-img">
+                                    <img src="img/portfolio/img.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Portfolio Item End -->
+                        <!-- Portfolio Item Start -->
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner shadow-dark">
+                                <div class="portfolio-img">
+                                    <img src="img/portfolio/img.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Portfolio Item End -->
+                        <!-- Portfolio Item Start -->
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner shadow-dark">
+                                <div class="portfolio-img">
+                                    <img src="img/portfolio/img.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Portfolio Item End -->
+                        <!-- Portfolio Item Start -->
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner shadow-dark">
+                                <div class="portfolio-img">
+                                    <img src="img/portfolio/img.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Portfolio Item End -->
+                        <!-- Portfolio Item Start -->
+                        <div class="portfolio-item padd-15">
+                            <div class="portfolio-item-inner shadow-dark">
+                                <div class="portfolio-img">
+                                    <img src="img/portfolio/img.jpg" alt="">
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Portfolio Item End -->
+                    </div>
+                </div>
+            </section>
+            <!-- Project End -->
+
+            <!-- Contact Start -->
+            <section class="contact" id="contact">
+                <div class="container">
+                    <div class="row">
+                        <div class="section-title padd-15">
+                            <h2>Get In Touch</h2>
+                        </div>
+                    </div>
+                    <h3 class="contact-title padd-15">If you have questions or inquries</h3>
+                    <h4 class="contact-sub-title padd-15">Please contact me</h4>
+                    <div class="row">
+                        <!-- Contact Item Start -->
+                        <div class="contact-info-item">
+                            <div class="icon"><i class='bx bxs-phone'></i></div>
+                            <h4>Call Me On</h4>
+                            <p>+63 915 675 5637</p>
+                        </div>
+                        <!-- Contact Item End -->
+                        <!-- Contact Item Start -->
+                        <div class="contact-info-item">
+                            <div class="icon"><i class='bx bxl-gmail' ></i></i></div>
+                            <h4>Email Me On</h4>
+                            <p>dolotjhonmelvin@gmail.com</p>
+                        </div>
+                        <!-- Contact Item End -->
+                        <!-- Contact Item Start -->
+                        <div class="contact-info-item">
+                            <div class="icon"><i class='bx bxl-linkedin' ></i></i></i></div>
+                            <h4>Message Me On</h4>
+                            <p><a href="www.linkedin.com/in/melvin-dolot">LinkedIn</a></p>
+                        </div>
+                        <!-- Contact Item End -->
+                        <!-- Contact Item Start -->
+                        <div class="contact-info-item">
+                            <div class="icon"><i class='bx bx-coffee' ></i></div>
+                            <h4>Address</h4>
+                            <p>1611 Pasig City, Metro Manila-NCR</p>
+                        </div>
+                        <!-- Contact Item End -->
+                    </div>
+                    <h3 class="contact-title padd-15">Send me an Email</h3>
+                    <h4 class="contact-sub-title padd-15">I'm very responsive ~1-2hrs :)</h4>
+                    <!-- Contact Form Start -->
+                    <div class="row">
+                        <div class="contact-form padd-15">
+                            <div class="row">
+                                <div class="form-item col-6 padd-15">
+                                    <div class="form-group">
+                                        <input type="text" class="form-control" placeholder=" Name" name="name" id="name">
+                                    </div>
+                                </div>
+                                <div class="form-item col-6 padd-15">
+                                    <div class="form-group">
+                                        <input type="email" class="form-control" placeholder=" Email" name="email" id="email">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="form-item col-12 padd-15">
+                                    <div class="form-group">
+                                        <input type="email" class="form-control" placeholder=" Subject" name="subject" id="subject">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="form-item col-12 padd-15">
+                                    <div class="form-group">
+                                        <textarea type="email" class="form-control" placeholder=" Message..." name="message" id="message"></textarea>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="form-item col-12 padd-15">
+                                    <div class="form-group">
+                                        <button class="hire-btn" type="submit"><i class='bx bx-send'></i> Send</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- Contact Form End -->
+                </div>
+            </section>
+            <!-- Contact End -->
         </div>
         <!-- Main Content End -->
     </div>
     <!-- Main Container End -->
-    
+
     <!-- Scripts -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js" referrerpolicy="no-referrer"></script>
     <script src="js/main.js"></script>
